# baseperm

./: Cargo.toml  README.md
src/: main.rs
src/baseperm/: mod.rs
