[package]
name = "baseperm"
version = "0.1.2"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A tool for generating valid permutations of encoded inputs"
license = "MIT"
homepage = "https://github.com/woodruffw/baseperm"

[badges]
# https://github.com/rust-lang/crates.io/pull/1838
# github-actions = { repository = "woodruffw/baseperm", workflow = "CI" }

[dependencies]
base32 = "0.4.0"
base64 = "0.12.1"
# bs58 = "0.3.0"
clap = "2.33.1"
phf = { version = "0.8.0", features = ["macros"] }
