[package]
name = "baseperm"
version = "0.1.3"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A tool for generating valid permutations of encoded inputs"
license-file = "LICENSE"
homepage = "https://github.com/woodruffw/baseperm"

[package.metadata.release]
no-dev-version = true

[badges]
# https://github.com/rust-lang/crates.io/pull/1838
# github-actions = { repository = "woodruffw/baseperm", workflow = "CI" }

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
# bs58 = "0.3.0"
clap = "4.0.4"
phf = { version = "0.11.1", features = ["macros"] }
